test/files/neg/t2712.scala
package test

object Test {
  scala.util.Random.shuffle("abcd".map(x => (x, x.toInt)).toMap)
}
